[package]
name = "quickcheck-derive"
version = "0.2.1"
edition = "2021"
publish = false

[lib]
proc-macro = true

[build-dependencies]
glob = "0.3"

[dependencies]
heck = "0.4"
proc-macro2 = "1.0"
thiserror = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
quickcheck = "1.0"
serde = { version = "1.0", features = ["derive"] }
trybuild = { version = "1.0", features = ["diff"] }
